fix: add img heights to decrease layout shifts

--- a/shelter/public/css/index.css
+++ b/shelter/public/css/index.css
@@ -64,6 +64,7 @@ body {
 .img-in-picture {
   display: block;
   width: 100%;
+  height: auto;
   pointer-events: none;
 }
 
