--- a/shelter/src/scss/global.scss
+++ b/shelter/src/scss/global.scss
@@ -18,5 +18,6 @@ body {
 .img-in-picture {
   display: block;
   width: 100%;
+  height: auto;
   pointer-events: none;
 }
